* Find a way to integrate OEEmulation device info results with the EDL
* Implemented OEEDL free ports and connector infos
* Improved chooser view (template chooser) with lazy initialization
* Implemented OEEmulation getDevicesInfoMap
* Implemented main emulation window context menu
* Added descriptions in ChooserViewController
* Improved several issues with the ChooserViewController

==2010-11-01==
* Fixed ${id} when saving emulation data
* Audio Controls volume is now playback volume, not global output volume
* Added AudioControls position control
* Fixed AudioControls when position is at the end
* Renamed DeviceChooser to HardwareChooser
* Implemented visible persistency in Audio Controls and Inspector windows
* Fixed Audio Controls. When pausing and moving position, the last buffer was played
* Improved Audio Controls, uses log volume from 0 to -100 dB

==2010-10-01==
* Implemented full-screen (with new window views)
* Implemented portaudio
* Implemented OpenGL
* Implemented preferences
* Implemented auto-choose when no template is selected
* Implemented template chooser
* Implemented user space scale independence
* Implemented document changed
* Connected the inspector to document properties
* Implemented video presets in inspector
* Implemented inspector lists
* Implemented mount/unmount disk images in inspector
* Implemented power off/pause bezels
* Improved fullscreen
* Implemented dialog foro adding expansions, disk drives or ports
* Implemented centered text cells in inspector
* Implemented emulation and device reader in libemulator
* Connected emulation lists to the template selector
* Connected emulation lists to the hardware selector
* Connected emulation lists to the inspector
* Connected dml to properties
* Implemented OEInfo
* Implemented inspector
* Implemented inspector settings
* Implemented template chooser
* Implemented default template chooser
* Improved template chooser
* Improved inspector